<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox_1"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_1_text"
        android:buttonTint="@color/CHECK_COLOR"/>

    <CheckBox
        android:id="@+id/checkBox_2"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_2_text"
        android:buttonTint="@color/CHECK_COLOR"/>

    <CheckBox
        android:id="@+id/checkBox_3"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_3_text"
        android:buttonTint="@color/CHECK_COLOR"/>

    <CheckBox
        android:id="@+id/checkBox_4"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_4_text"
        android:buttonTint="@color/CHECK_COLOR"/>

    <CheckBox
        android:id="@+id/checkBox_5"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkbox_5_text"
        android:buttonTint="@color/CHECK_COLOR"/>

    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/toast"/>
</LinearLayout>